--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.7.0",
+    "dotenv": "^16.0.3",
     "graphql": "^16.5.0",
     "mongoose": "^6.3.3"
   },
